# chat-me-pt-backend

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
api/: admin.py  agent.py  document_indexer.py  examples.py  models.py  tests.py  urls.py  views.py
api/management/commands/: rebuild_index.py
api/migrations/: 0001_initial.py  0002_visitor_name.py  0003_alter_visitor_interests.py  0004_chatmessage_referenced_documents.py  0005_chatmessage_llm_use.py
chat_me_pt_backend/: settings.py  wsgi.py
search_content/: meta.json
search_content/Aspen/: about.txt
search_content/Misc/: ChatMePT.txt  github.txt
