[tool.poetry]
name = "chat-me-pt-backend"
version = "0.1.0"
description = "A ChatGPT assistant made to make inquiries easier (for me and for you)"
authors = ["Troy Fulton <25339228+troy-fulton@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.15"
langchain = "^0.3.25"
langchain-community = "^0.3.25"
anthropic = "^0.54.0"
gunicorn = "^23.0.0"
dj-database-url = "^3.0.0"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.7.0"
langchain-anthropic = "^0.3.15"
sentence-transformers = "^4.1.0"
langchain-huggingface = "^0.3.0"
faiss-cpu = "^1.11.0"
pypdf = "^5.6.0"
transformers = "^4.52.4"
whoosh = "^2.7.4"

[tool.poetry.group.test.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
mypy = "^1.16.0"
flake8 = "^7.2.0"
django-types = "^0.20.0"
djangorestframework-types = "^0.9.0"

[poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "whoosh.*"
ignore_missing_imports = true